--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     compileOnly "com.google.auto.service:auto-service:1.0"
     annotationProcessor "com.google.auto.service:auto-service:1.0"
 
+    // Lombok
+    compileOnly "org.projectlombok:lombok:1.18.22"
+    annotationProcessor "org.projectlombok:lombok:1.18.22"
+
     // JUnit
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
