--- a/samples/java8/build.gradle
+++ b/samples/java8/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
 }
 
-group "org.objectvalidator.examples"
+group "org.objectvalidator.samples"
 version "0.1-SNAPSHOT"
 
 repositories {
