[PoC] Fix java version

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id "java"
 }
 
-group "org.objectvalidator.processor"
-version "0.1-SNAPSHOT"
+group = "org.objectvalidator.processor"
+version = "0.1-SNAPSHOT"
+sourceCompatibility = "1.8"
 
 repositories {
     mavenCentral()
