--- a/samples/java8/build.gradle
+++ b/samples/java8/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id "java"
 }
 
-group "org.objectvalidator.samples"
-version "0.1-SNAPSHOT"
+group = "org.objectvalidator.samples"
+version = "0.1-SNAPSHOT"
+sourceCompatibility = "1.8"
 
 repositories {
     mavenCentral()
