--- a/samples/spring/build.gradle
+++ b/samples/spring/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id "java"
 }
 
-group "org.objectvalidator.samples"
-version "0.1-SNAPSHOT"
+group = "org.objectvalidator.samples"
+version = "0.1-SNAPSHOT"
 sourceCompatibility = "1.8"
 
 repositories {
